# experiments

./: .gitignore  LICENSE  floating-point.c  power-of-two.c  rle.c  roman-dec.c  ycbcrRgbConverter.c
TuringMachine/: Makefile  README.md  Tape.java  TuringMachine.java  addTM.txt
bmp_reader/: Makefile  README.md  main.c  read_1bit_bmp.c  read_1bit_bmp.h  read_1bit_bmp_test.c
coding-math/: conic.js  graph-function.R  index.html  lissajous.js  main.js  trig02.js
dcl-to-word/: Makefile.in  README.md  aclocal.m4  configure  configure.ac
dcl-to-word/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dcl-to-word/src/: Makefile.am  Makefile.in  dcl.c  dcl.h  main.c  mystring.c  mystring.h  stack.c  stack.h
dcl-to-word/tests/: Makefile.am  Makefile.in  check_dcl.c
opencv/: compile.sh  display-image.cpp  play-video.cpp
power-of-two/: Makefile  README.md  power-of-two-experiments.c  power-of-two-lib.c  power-of-two-lib.h  power_of_two
tcl-c/: gui.tcl  kill-lib.c  server.tcl
