TESTS = check_dcl
check_PROGRAMS = check_dcl
check_dcl_SOURCES = check_dcl.c $(top_builddir)/src/dcl.h $(top_builddir)/src/mystring.h $(top_builddir)/src/stack.h
check_dcl_CFLAGS = @CHECK_CFLAGS@
check_dcl_LDADD = $(top_builddir)/src/libdcl.la $(top_builddir)/src/libmystring.la $(top_builddir)/src/libstack.la @CHECK_LIBS@
